@@ -260,6 +260,7 @@ DECLARE_PKCS12_STACK_OF(PKCS7)
 #define PKCS7_BINARY		0x80
 #define PKCS7_NOATTR		0x100
 #define	PKCS7_NOSMIMECAP	0x200
+#define	PKCS7_PARTSIGN		0x400
 
 /* Flags: for compatibility with older code */
 
